--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </nav>
     <section id="home">
         <h1 class="heading">Welcome to Quastaurant</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio numquam maiores iusto laudantium accusamus maxime dolorum quod repudiandae, perferendis non possimus dolores reiciendis ut, quos, aliquam placeat autem rem! Quaerat officiis repellat quae saepe.
+        <p>Hello beautiful people and a warm welcome to the best restaurant of the world,owned and managed by the greatest of all time, Mr. Milan Sinha, here we provide you all kinds of dishes in a very reasonable price.
         </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit, debitis!</p>
+        <p>So loose your wallets a bit and order fast, the food's waiting for you people!!</p>
         <button class="btn">Order Now</button>
     </section>
     <section id="services">
@@ -37,12 +37,12 @@
             <div class="box">
                 <img src="indian_food.jpg" alt="Not Found">
                 <h2 class="indian">Indian Food</h2>
-                <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, libero beatae. Quaerat reiciendis, tempora pariatur repudiandae necessitatibus voluptatibus cupiditate modi est vero.</p>
+                <p class="des">We have different varities of Indian food keeping in our mind the regional taste of each and every person from Butter chicken to Idli-Dosa.</p>
             </div>
             <div class="box">
                 <img src="foreign_food.jpg" alt="Not Found">
                 <h2 class="indian">Foreign Food</h2>
-                <p class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat tenetur in voluptate ipsam sunt a, qui, quaerat, unde eaque consequuntur neque numquam.</p>
+                <p class="des">Apart from the Indian food, we also have some 'videshi tadka' in our recipe including but not limited to French, German, Chinese, Mexican and many more. </p>
             </div>
         </div>
     </section>
