--- a/Login_Form/index.html
+++ b/Login_Form/index.html
@@ -4,7 +4,7 @@
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/a176c421af.js" crossorigin="anonymous"></script>
     <title>Login Portal</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 
   </head>
 
