--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
             <h4>Milan Kumar</h4>
         </div>
         <div class="right-container">
-            <ul>
+            <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skills">Skills</a></li>
@@ -31,6 +31,10 @@
                 <li><a href="#Interests">Interests</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
+        </div>
+        <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </div>
         </div>
     </nav>
     <section class="Home">
@@ -136,30 +140,42 @@
             <div class="conts1">
                 <div class="card-box">
                     <img src="chess.jpg" alt="Not Found">
-                    <h4>Chess</h4>
-                    <p>I'm a chess geek specially a blitz player.</p>
+                    <div class="entire chess">
+                        <h4>Chess</h4>
+                        <p>I'm a chess geek specially a blitz player.</p>
+                    </div>
                 </div>
                 <div class="card-box">
                     <img src="reading.jpg" alt="Not Found">
-                    <h4>Reading</h4>
-                    <p>I love reading novels that includes but is not limited to "A Brief History Of Time","Think & Grow
-                        Rich", etc.</p>
+                    <div class="entire reading">
+                        <h4>Reading</h4>
+                        <p>I love reading novels that includes but is not limited to "A Brief History Of Time","Think &
+                            Grow
+                            Rich", etc.</p>
+                    </div>
                 </div>
                 <div class="card-box">
                     <img src="music.jpg" alt="Not Found">
-                    <h4>Music</h4>
-                    <p>Music has always been a good source of stress-releaser for me.</p>
+                    <div class="entire music" style="">
+                        <h4>Music</h4>
+                        <p>Music has always been a good source of stress-releaser for me.</p>
+                    </div>
                 </div>
                 <div class="card-box">
                     <img src="meme.jpg" alt="Not Found">
-                    <h4>Memes</h4>
-                    <p>Memes are the "true love". I scroll a lot of memes daily and make some too. </p>
+                    <div class="entire memes">
+                        <h4>Memes</h4>
+                        <p>Memes are the "true love". I scroll a lot of memes daily and make some too. </p>
+                    </div>
                 </div>
                 <div class="card-box">
                     <img src="scifi.jpg" alt="Not Found">
-                    <h4>Sci-Fi Movies</h4>
-                    <p>These movies just exceed the limit of thinking and leave you with a faded mind and that's what
-                        makes me like Sci-Fi movies.</p>
+                    <div class="entire scifi">
+                        <h4>Sci-Fi Movies</h4>
+                        <p>These movies just exceed the limit of thinking and leave you with a faded mind and that's
+                            what
+                            makes me like Sci-Fi movies.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -248,8 +264,10 @@
         </div>
     </section>
     <footer>
-        <span>Created By <a href="#">MilanKumar</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="#">MilanKumar</a> | <span class="far fa-copyright"></span> 2021 All rights
+            reserved.</span>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
