--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,13 +57,13 @@
                 <div class="right-container1">
                     <h2>Hello, I'm <span>Milan!</span></h2>
                     <p>I'm a second year B.Tech. student of Indian Institute Of Technology, Delhi and a native of Bokaro
-                        Steel City, Jharkhand. I completed my school life from Chinmaya Vidyalaya storing tons of
+                        Steel City, Jharkhand. I completed my schooling from Chinmaya Vidyalaya and have stored tons of
                         memories that I made there.I am currently a resident of Karakoram Hostel at IIT-Delhi and hope
                         to create a lot of fun moments there too.Apart from my academic life, I'm also involved in some
                         extra-curricular activities.I am a big fan of MS Dhoni and have spent my childhood watching all
-                        the great winning moments we had under his captaincy.The thing that filled my childhood with
+                        the great winning moments he gave us under his captaincy.The thing that filled my childhood with
                         imagination and wonder was the "Harry Potter" series (my favorite series till date) .I feel like
-                        being a part of it and just can't come over the craziness level even after watching each part
+                        being a part of it and just can't get over the craziness level even after watching each part
                         more than around 10 times.</p>
                 </div>
             </div>
