--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="card-box">
                     <img src="music.jpg" alt="Not Found">
-                    <div class="entire music" style="">
+                    <div class="entire music" >
                         <h4>Music</h4>
                         <p>Music has always been a good source of stress-releaser for me.</p>
                     </div>
